# social-media-metrics-api

./: .env.template  .flake8  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  run.sh  setup.sh
alembic/: env.py
alembic/versions/: 0cf9c0be220d_initial_migration.py  56b9e86e5425_add_platform_fields_to_users_table.py
app/: __init__.py  main.py
app/api/: endpoints.py
app/core/: config.py  security.py  social_api.py
app/db/: crud.py  database.py  models.py
app/schemas/: metric.py  response.py  social.py  user.py
app/services/: facebook_service.py  instagram_service.py  metric_aggregator.py  metric_service.py  tiktok_service.py  twitter_service.py  user_service.py  (+1 more)
docs/: 1. Plano de Projeto para Aplicação de Coleta de Métricas de Redes Sociais.md  Estrutura do Backend.md  Informações Adicionais.md  Product Requirements Document.md  UML de Fluxo e ER de Banco.md  Wireframes e Documentação Swagger.md  api_integration.md  api_integration_checklist.md  api_integration_plan.md  backend_checklist.md  database_schema.md  e2e_test_results.md  e2e_testing_procedures.md  future_roadmap.md  project_roadmap.md  status_checklist.md  technical_notes.md
prompts/: Prompts Adaptados para RooCode.md
scripts/: novachave.py  refresh_tokens.py
tests/: conftest.py  test_config.py  test_data_processor.py  test_facebook_service.py  test_instagram_service.py  test_metric_aggregator.py  test_rate_limiter.py  test_retry.py  test_security.py  test_social_api.py  test_tiktok_service.py  test_twitter_endpoints.py  test_twitter_service.py  test_whatsapp_service.py
(+36 files in other folders)
